fixing spacing issue

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -641,13 +641,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3019', end
 .schoolScoreContain {
 	width: 50%;
 	float: left;
-	margin-top: 5ex;
+	margin-top: 3ex;
 }
 
 .schoolChatContain {
 		width: 50%;
 		float: right;	
-		margin-top: 5ex;
+		margin-top: 3ex;
 }
 
 .schoolChatContain h1 {
